--- a/package.json
+++ b/package.json
@@ -11,16 +11,30 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@angular/animations": "^7.2.12",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
     "@angular/forms": "~7.2.0",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/pwa": "^0.12.4",
     "@angular/router": "~7.2.0",
+    "@angular/service-worker": "~7.2.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "firebase": "^5.9.2",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
+    "ngx-spinner": "^7.0.0",
+    "node-rest-api-client": "^4.0.0",
+    "node-rest-client": "^3.1.0",
+    "popper.js": "^1.14.7",
     "rxjs": "~6.3.3",
+    "slack-webhook": "^1.0.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
